@@ -1,4 +1,12 @@
 # Nmap Changelog ($Id$); -*-text-*-
+
+o Nmap's output options (-oA, -oX, etc.) now support strftime()-like
+  conversions in the filename.  %H, %M, %S, %T, %R, %m, %d, %y, and
+  %Y are all the same as in strftime().  %t is the same as %H%M%S,
+  %r is the same as %H%M, and %D is the same as %m%d%y.  This means
+  that "-oX 'scan-%T-%D.xml'" uses an XML file in the form of
+  "scan-14:48:40-121307.xml". [Kris]
+
 4.50
 
 o Bumped up the version number to the big 4.50!
